--- a/dev_scripts/pyproject.toml
+++ b/dev_scripts/pyproject.toml
@@ -20,6 +20,13 @@ classifiers = [
 requires-python = ">=3.9"
 dependencies = [
     "aas-core-codegen@git+https://github.com/aas-core-works/aas-core-codegen@4c01ed64",
+    "requests>=2.32.5",
+]
+
+
+[dependency-groups]
+dev = [
+    "types-requests>=2.32.4",
 ]
 
 [tool.setuptools.packages.find]
