Fix add CI for `dev_scripts`

--- a/dev_scripts/pyproject.toml
+++ b/dev_scripts/pyproject.toml
@@ -26,8 +26,11 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "black==25.9.0",
+    "mypy==1.18.2",
+    "pylint==3.3.8",
     "types-requests>=2.32.4",
 ]
 
 [tool.setuptools.packages.find]
-exclude = ["tests", "continuous_integration", "dev_scripts"]
+exclude = ["continuous_integration_of_dev_scripts"]
